--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^27.4.1",
     "@types/promise-queue": "^2.2.0",
     "@types/promise-timeout": "^1.3.0",
+    "@types/sdp-transform": "^2.4.5",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "esbuild": "^0.14.27",
@@ -28,6 +29,7 @@
     "events": "^3.3.0",
     "promise-queue": "^2.2.5",
     "promise-timeout": "^1.3.0",
+    "sdp-transform": "^2.14.1",
     "ts-log": "^2.2.4"
   }
 }
