--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,9 @@
         "types": ["node", "jest"],
         "allowJs": false,
         "declaration": true,
-        "declarationDir": "types",
         "sourceMap": true,
+        "declarationMap": true,
         "outDir": "dist",
-        "rootDir": "src",
-        "baseUrl": "src",
         "removeComments": false,
         "strict": true,
         "noUnusedLocals": true,
