--- a/package.json
+++ b/package.json
@@ -1,35 +1,47 @@
 {
-  "name": "@metacodelabs/janus-videoroom-web-sdk",
-  "version": "0.1.0",
-  "module": "dist/index.esm.js",
-  "typings": "dist/index.d.ts",
-  "license": "MIT",
-  "scripts": {
-    "build": "esbuild src/index.ts --bundle --minify --sourcemap=external --outfile=dist/index.js",
-    "build-dev": "esbuild src/index.ts --bundle '--define:process.env.PROMISE_QUEUE_COVERAGE=false' --target=chrome72,safari14 --format=esm --outfile=dist/index.js",
-    "test": "jest"
-  },
-  "devDependencies": {
-    "@types/events": "^3.0.0",
-    "@types/jest": "^27.4.1",
-    "@types/promise-queue": "^2.2.0",
-    "@types/promise-timeout": "^1.3.0",
-    "@types/sdp-transform": "^2.4.5",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "esbuild": "^0.14.27",
-    "eslint": "^8.12.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0",
-    "typed-emitter": "^2.1.0",
-    "typescript": "^4.6.3"
-  },
-  "dependencies": {
-    "events": "^3.3.0",
-    "promise-queue": "^2.2.5",
-    "promise-timeout": "^1.3.0",
-    "sdp-transform": "^2.14.1",
-    "ts-log": "^2.2.4"
-  }
+    "name": "@metacodelabs/janus-videoroom-web-sdk",
+    "version": "0.1.3",
+    "main": "dist/janus-videoroom-web-sdk.js",
+    "types": "dist/janus-videoroom-web-sdk.d.ts",
+    "source": "src/index.ts",
+    "license": "MIT",
+    "scripts": {
+        "tsc": "tsc -p tsconfig.json",
+        "build": "esbuild src/index.ts --bundle '--define:process.env.PROMISE_QUEUE_COVERAGE=false' --target=chrome58,safari11 --format=esm --sourcemap=external --outfile=dist/janus-videoroom-web-sdk.js",
+        "build-all": "yarn clean && yarn build && yarn tsc && api-extractor run --local --verbose -c api-extractor.json5",
+        "clean": "rm -rf dist",
+        "test": "jest"
+    },
+    "devDependencies": {
+        "@types/events": "^3.0.0",
+        "@types/jest": "^27.4.1",
+        "@types/promise-queue": "^2.2.0",
+        "@types/promise-timeout": "^1.3.0",
+        "@types/sdp-transform": "^2.4.5",
+        "@typescript-eslint/eslint-plugin": "^5.16.0",
+        "@typescript-eslint/parser": "^5.16.0",
+        "esbuild": "^0.14.27",
+        "eslint": "^8.12.0",
+        "jest": "^27.5.1",
+        "ts-jest": "^27.1.4",
+        "ts-node": "^10.7.0",
+        "typed-emitter": "^2.1.0",
+        "typescript": "^4.6.3"
+    },
+    "dependencies": {
+        "events": "^3.3.0",
+        "promise-queue": "^2.2.5",
+        "promise-timeout": "^1.3.0",
+        "sdp-transform": "^2.14.1",
+        "ts-log": "^2.2.4"
+    },
+    "files": [
+        "src/**/*",
+        "dist/janus-videoroom-web-sdk.js",
+        "dist/janus-videoroom-web-sdk.js.map",
+        "dist/janus-videoroom-web-sdk.d.ts",
+        "README.md",
+        "LICENSE",
+        "package.json"
+    ]
 }
